# CrossEngine

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/engine/: game.cpp  game.hpp  window.cpp  window.hpp
src/include/: GLFW
toolchains/: mingw-arm.cmake  mingw-arm64.cmake  mingw-i686.cmake  mingw-x86_64.cmake
